updated with practice of positioning elements

--- a/01_Positioning_Elements/1_floats/unsolved/css/index.css
+++ b/01_Positioning_Elements/1_floats/unsolved/css/index.css
@@ -3,6 +3,21 @@ h1 {
 }
 /* Write your selector for .left below */
 
+.left {
+    float: left;
+    padding: 15px;
+}
+
 /* Write your selector for .right below */
 
+.right { 
+    float: right;
+    padding: 15px;
+
+}
 /* Write your selector for .separator below */
+
+.separator {
+    width: 750px;
+
+}
