--- a/01_Positioning_Elements/2_block_and_inline_elements/unsolved/css/index.css
+++ b/01_Positioning_Elements/2_block_and_inline_elements/unsolved/css/index.css
@@ -3,7 +3,9 @@
   background-color: lightblue;
   padding: 35px;
 /* Add margin here. */
+margin: 0 auto;
 /* Add text align below */
+text-align: left;
 }
 
 
