--- a/02_Positioning_Relative_Absolute/unsolved/css/index.css
+++ b/02_Positioning_Relative_Absolute/unsolved/css/index.css
@@ -15,17 +15,22 @@ body {
   padding: 30px;
   margin: 10px;
   display: flex;
+  position: relative;
 }
 .absolute {
   height: 150px;
   width: 150px;
   background-color: red;
   color: white;
-
+  position: absolute;
+  bottom:0;
+  right:0;
 }
 .fixed {
   height: 200px;
   width: 200px;
   background-color: green;
-
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
